on a flexible and high quality code base designed for small 
to medium-large businesses.
 
It features a simple interface, fully adaptable administration
and user experience, internationalization, platform and database 
abstraction, and endless possibilities for project expansion. 
--------------------

----- VERSION 2.5.6 (development) -----

2005-05-04, kato
  Upgraded ADODB library to 4.6.2
    - zentrack_2/includes/adodb/*

  Removed unnecessary if condition in projects list
    - zentrack_2/www/projects.php 1.13
    
  Fixed ZT_DEFINED for egate scripts (which are not included from www)
    - zentrack_2/includes/egate.php 1.8
    - zentrack_2/includes/egate_create.php 1.3
    - zentrack_2/includes/egate_check.php 1.9
    - zentrack_2/includes/egate_check_create.php 1.3
    - zentrack_2/includes/egate_utils.php 1.43
    - zentrack_2/install/egate_config.php.default 1.16
    
  Added missing security check to configVars template
    - zentrack_2/install/configVars.php.default 1.12

----- VERSION 2.5.5 (2005-05-02) -----

2005-05-04, kato
  Added patch files and simplified upgrade instructions
    - zentrack_2/UPGRADE.readme 1.25
    - zentrack_2/install/upgrade_2-5-0-1_to_2-5-5.patch 1.1
    - zentrack_2/install/upgrade_2-5-0-2_to_2-5-5.patch 1.1
    - zentrack_2/install/upgrade_2-5-5pre1_to_2-5-5.patch 1.1

2005-04-27, kato
  Added security to includes/ files to provide security for users who
  do not correctly locate the includes/ files outside of the web tree.
    - all include files
  Added the ability to add non-standard fields such as wkd_hours to the create
  and edit screens.
    - zentrack_2/includes/zen.class 1.36
    - zentrack_2/includes/parseVarfields.php 1.4
    - zentrack_2/includes/validateFields.php 1.1
    - zentrack_2/www/addProjectSubmit.php 1.19
    - zentrack_2/www/addSubmit.php 1.25
    - zentrack_2/www/admin/editTicketSubmit.php 1.5
  Improved header/footer comments and messages
    - zentrack_2/includes/footer.php 1.34